bat.bool1.posneg.PosNeg.scala.code
def posNeg(a:Int, b:Int, negative:Boolean):Boolean = {
  if ((a<=0&&b>=0||a>=0&&b<=0) || (negatif && (a&&b)<=0)){
    true
  }
}